CCD-989 Make CaseTypeDefinition immutable